--- a/Rmake.html
+++ b/Rmake.html
@@ -150,7 +150,7 @@
 <hr>
 <table cellspacing="5">
     <tr><th><em>For Queries : </em></th>
-    <th><a href="Contact.html">Contact Me</a></th></tr>
+    <th><a href="contact.html">Contact Me</a></th></tr>
 </table>
 <hr style="border-style: dotted">
 
